登录和注册还有rules

--- a/​xhs_chrome_plugin/popup.html
+++ b/​xhs_chrome_plugin/popup.html
@@ -76,9 +76,9 @@
   
   <div id="modeInfo" class="mode-info">尚未配置API，将下载到本地</div>
   
-  <button id="getNotifications">获取通知列表</button>
+  <button id="getNotifications">上传通知列表</button>
   <button id="expandComments" class="secondary">展开所有评论</button>
-  <button id="getComments">获取推文评论</button>
+  <button id="getComments">上传推文评论</button>
   
   <div id="status"></div>
   
