--- a/​xhs_chrome_plugin/options.html
+++ b/​xhs_chrome_plugin/options.html
@@ -147,7 +147,7 @@
       &nbsp;&nbsp;• 评论数据：/api/comments/data<br>
       &nbsp;&nbsp;• 通知数据：/api/notifications/data<br>
       &nbsp;&nbsp;• 笔记数据：/api/notes/data<br>
-      - 历史评论功能需要正确登录后才能使用<br>
+      - 历史评论功能需要正确登录后才能使用，访问路径：/api/comments/user/{user_id}<br>
       - 默认API基础地址: http://localhost:8000
     </div>
   </div>
