修复插件注册账号bug

--- a/​xhs_chrome_plugin/options.html
+++ b/​xhs_chrome_plugin/options.html
@@ -101,6 +101,7 @@
       <div class="note">请使用Google Authenticator等App扫描绑定后输入</div>
     </div>
     <button id="loginBtn" type="button">登录</button>
+    <button id="logoutBtn" type="button" style="margin-left: 10px; background-color: #666;">退出登录</button>
 
     <button id="showRegisterBtn" type="button" style="margin-left: 10px; background-color: #00994d;">注册新账号</button>
 
