--- a/xhs_plugin_v2/logs.html
+++ b/xhs_plugin_v2/logs.html
@@ -267,6 +267,179 @@
             100% { transform: rotate(360deg); }
         }
 
+        /* 弹框样式 */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 10000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(4px);
+        }
+
+        .modal.show {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            animation: modalFadeIn 0.3s ease;
+        }
+
+        @keyframes modalFadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        .modal-content {
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+            width: 90%;
+            max-width: 900px;
+            max-height: 85vh;
+            display: flex;
+            flex-direction: column;
+            animation: modalSlideIn 0.3s ease;
+        }
+
+        @keyframes modalSlideIn {
+            from { 
+                transform: translateY(-30px);
+                opacity: 0;
+            }
+            to { 
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        .modal-header {
+            padding: 20px 24px;
+            border-bottom: 1px solid #e1e5e9;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border-radius: 12px 12px 0 0;
+        }
+
+        .modal-header h2 {
+            margin: 0;
+            font-size: 18px;
+            font-weight: 600;
+        }
+
+        .modal-close {
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+            opacity: 0.8;
+            transition: opacity 0.2s ease;
+            line-height: 1;
+            padding: 0 4px;
+        }
+
+        .modal-close:hover {
+            opacity: 1;
+        }
+
+        .modal-body {
+            padding: 24px;
+            overflow-y: auto;
+            flex: 1;
+            min-height: 0;
+        }
+
+        .modal-footer {
+            padding: 16px 24px;
+            border-top: 1px solid #e1e5e9;
+            display: flex;
+            gap: 12px;
+            justify-content: flex-end;
+            background: #f8f9fa;
+            border-radius: 0 0 12px 12px;
+        }
+
+        .modal-section {
+            margin-bottom: 24px;
+            background: #f8f9fa;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        .modal-section-header {
+            background: #667eea;
+            color: white;
+            padding: 12px 16px;
+            font-weight: 600;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .modal-section-content {
+            padding: 16px;
+            background: white;
+        }
+
+        .modal-info-grid {
+            display: grid;
+            grid-template-columns: auto 1fr;
+            gap: 8px 16px;
+            font-family: 'Courier New', monospace;
+            font-size: 13px;
+        }
+
+        .modal-info-label {
+            font-weight: 600;
+            color: #495057;
+            white-space: nowrap;
+        }
+
+        .modal-info-value {
+            color: #212529;
+            word-break: break-all;
+        }
+
+        .modal-code {
+            background: #f1f3f4;
+            border: 1px solid #e1e5e9;
+            border-radius: 6px;
+            padding: 12px;
+            font-family: 'Courier New', monospace;
+            font-size: 12px;
+            white-space: pre-wrap;
+            word-break: break-all;
+            max-height: 200px;
+            overflow-y: auto;
+            line-height: 1.4;
+        }
+
+        .modal-badge {
+            display: inline-block;
+            padding: 4px 8px;
+            border-radius: 4px;
+            font-size: 12px;
+            font-weight: 600;
+            text-transform: uppercase;
+        }
+
+        .modal-status-2xx { background: #d4edda; color: #155724; }
+        .modal-status-3xx { background: #d1ecf1; color: #0c5460; }
+        .modal-status-4xx { background: #fff3cd; color: #856404; }
+        .modal-status-5xx { background: #f8d7da; color: #721c24; }
+        .modal-status-error { background: #f8d7da; color: #721c24; }
+
+        .modal-method-get { background: #d4edda; color: #155724; }
+        .modal-method-post { background: #fff3cd; color: #856404; }
+        .modal-method-put { background: #d1ecf1; color: #0c5460; }
+        .modal-method-delete { background: #f8d7da; color: #721c24; }
+        .modal-method-patch { background: #e2e3e5; color: #383d41; }
+
         @media (max-width: 768px) {
             .controls {
                 flex-direction: column;
@@ -362,6 +535,23 @@
         </div>
 
         <div id="logsContainer"></div>
+    </div>
+
+    <!-- 详细信息弹框 -->
+    <div id="detailModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="modalTitle">🔍 网络请求详细信息</h2>
+                <span class="modal-close" id="modalClose">&times;</span>
+            </div>
+            <div class="modal-body" id="modalBody">
+                <!-- 详细信息内容将通过JavaScript动态生成 -->
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" id="copyDetailsBtn">📋 复制详情</button>
+                <button class="btn btn-primary" id="closeModalBtn">关闭</button>
+            </div>
+        </div>
     </div>
 
     <script src="logs.js"></script>
