--- a/xhs_plugin_v2/popup.html
+++ b/xhs_plugin_v2/popup.html
@@ -4,340 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小红书网络监控插件</title>
-    <style>
-        body {
-            width: 320px;
-            min-height: 400px;
-            margin: 0;
-            padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: #333;
-        }
-
-        .container {
-            padding: 20px;
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 20px;
-            color: white;
-        }
-
-        .header h1 {
-            margin: 0 0 8px 0;
-            font-size: 18px;
-            font-weight: 600;
-        }
-
-        .header .subtitle {
-            font-size: 12px;
-            opacity: 0.9;
-            margin: 0;
-        }
-
-        .status-card {
-            background: white;
-            border-radius: 12px;
-            padding: 16px;
-            margin-bottom: 16px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        }
-
-        .api-status {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            margin-bottom: 12px;
-        }
-
-        .status-indicator {
-            width: 8px;
-            height: 8px;
-            border-radius: 50%;
-            background: #dc3545;
-        }
-
-        .status-indicator.connected {
-            background: #28a745;
-        }
-
-        .status-text {
-            font-size: 12px;
-            color: #666;
-            flex: 1;
-        }
-
-        .sso-container {
-            margin-top: 12px;
-        }
-
-        .sso-container.hidden {
-            display: none;
-        }
-
-        .btn {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            border-radius: 8px;
-            font-size: 14px;
-            font-weight: 500;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            margin-bottom: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 8px;
-        }
-
-        .btn:hover {
-            transform: translateY(-1px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        }
-
-        .btn:active {
-            transform: translateY(0);
-        }
-
-        .btn:disabled {
-            opacity: 0.6;
-            cursor: not-allowed;
-            transform: none;
-        }
-
-        .btn-primary {
-            background: #007bff;
-            color: white;
-        }
-
-        .btn-primary:hover:not(:disabled) {
-            background: #0056b3;
-        }
-
-        .btn-success {
-            background: #28a745;
-            color: white;
-        }
-
-        .btn-success:hover:not(:disabled) {
-            background: #1e7e34;
-        }
-
-        .btn-secondary {
-            background: #6c757d;
-            color: white;
-        }
-
-        .btn-secondary:hover:not(:disabled) {
-            background: #545b62;
-        }
-
-        .btn-outline {
-            background: transparent;
-            color: #007bff;
-            border: 1px solid #007bff;
-        }
-
-        .btn-outline:hover:not(:disabled) {
-            background: #007bff;
-            color: white;
-        }
-
-        .btn-danger {
-            background: #dc3545;
-            color: white;
-        }
-
-        .btn-danger:hover:not(:disabled) {
-            background: #c82333;
-        }
-
-        .logout-container {
-            margin-top: 8px;
-            display: none;
-        }
-
-        .logout-container.show {
-            display: block;
-        }
-
-        .spinner {
-            width: 14px;
-            height: 14px;
-            border: 2px solid rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
-            border-top-color: #fff;
-            animation: spin 1s linear infinite;
-        }
-
-        @keyframes spin {
-            to { transform: rotate(360deg); }
-        }
-
-        .stats-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 12px;
-            margin-bottom: 16px;
-        }
-
-        .stat-item {
-            text-align: center;
-            padding: 12px;
-            background: #f8f9fa;
-            border-radius: 8px;
-        }
-
-        .stat-number {
-            font-size: 20px;
-            font-weight: 600;
-            color: #007bff;
-            margin-bottom: 4px;
-        }
-
-        .stat-label {
-            font-size: 12px;
-            color: #666;
-        }
-
-        .empty-state {
-            text-align: center;
-            padding: 20px;
-            color: #666;
-        }
-
-        .empty-state .icon {
-            font-size: 32px;
-            margin-bottom: 12px;
-            opacity: 0.5;
-        }
-
-        .empty-state .message {
-            font-size: 14px;
-            line-height: 1.4;
-        }
-
-        .empty-state .config-link {
-            color: #007bff;
-            text-decoration: none;
-            font-weight: 500;
-        }
-
-        .empty-state .config-link:hover {
-            text-decoration: underline;
-        }
-
-        .divider {
-            height: 1px;
-            background: #eee;
-            margin: 16px 0;
-        }
-
-        .footer-links {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 16px;
-        }
-
-        .footer-link {
-            color: rgba(255, 255, 255, 0.8);
-            text-decoration: none;
-            font-size: 12px;
-            padding: 4px 8px;
-            border-radius: 4px;
-            transition: all 0.2s ease;
-        }
-
-        .footer-link:hover {
-            color: white;
-            background: rgba(255, 255, 255, 0.1);
-        }
-
-        .warning-message {
-            background: #fff3cd;
-            border: 1px solid #ffeaa7;
-            color: #856404;
-            padding: 8px 12px;
-            border-radius: 6px;
-            font-size: 12px;
-            margin-bottom: 12px;
-        }
-
-        /* 抓取规则样式 */
-        .rules-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 12px;
-        }
-
-        .rules-info {
-            font-size: 14px;
-            font-weight: 500;
-            color: #333;
-        }
-
-        .btn-small {
-            padding: 6px 12px;
-            font-size: 12px;
-            min-width: auto;
-        }
-
-        .rules-list {
-            max-height: 200px;
-            overflow-y: auto;
-            border: 1px solid #e9ecef;
-            border-radius: 6px;
-            background: #f8f9fa;
-        }
-
-        .rule-item {
-            padding: 8px 12px;
-            border-bottom: 1px solid #e9ecef;
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-        }
-
-        .rule-item:last-child {
-            border-bottom: none;
-        }
-
-        .rule-content {
-            flex: 1;
-        }
-
-        .rule-name {
-            font-size: 12px;
-            font-weight: 500;
-            color: #007bff;
-            margin-bottom: 2px;
-        }
-
-        .rule-pattern {
-            font-size: 11px;
-            font-family: monospace;
-            color: #6c757d;
-            margin-bottom: 2px;
-            word-break: break-all;
-        }
-
-        .rule-description {
-            font-size: 10px;
-            color: #666;
-        }
-
-        .rule-priority {
-            font-size: 10px;
-            color: #28a745;
-            font-weight: 500;
-            margin-left: 8px;
-            white-space: nowrap;
-        }
-    </style>
+    <link rel="stylesheet" href="shared/common.css">
+    <link rel="stylesheet" href="popup.css">
 </head>
 <body>
     <div class="container">
@@ -428,6 +96,6 @@
         </div>
     </div>
 
-    <script src="popup.js"></script>
+    <script src="popup/index.js" type="module"></script>
 </body>
 </html> 
